examples/test/testpolicy9761.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9761
  namespace: namespace285
spec:
  podSelector:
    matchLabels:
      key48: value1
      key36: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key22: value28
      podSelector:
        matchLabels:
          key29: value26
          key33: value1
          key17: value3
